Continued German translation of manual pages and scripts:
        * man/po/de.po: Updated to 1335t0f48u.
        * scripts/po/de.po: Updated to 221t0f259u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
+  * German (Helge Kreutzmann)
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy)
