--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-19  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1335t0f48u.
+
 2007-12-09  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-gensymbols.1: Remove the restriction that included files
