--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-12  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Use ||= instead of checking if the
+	variables are not defined.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/update-alternatives.pl (fill_missing_slavepaths): Likewise.
+
 2007-12-11  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Deps.pm: Add a compare function that compares
