--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-12  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Use || to fallback to
+	a default value instead of using a temporary variable and checking if
+	it's not defined.
+
+2007-12-12  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-genchanges.pl: Use ||= instead of checking if the
 	variables are not defined.
 	* scripts/dpkg-gencontrol.pl: Likewise.
