dpkg-genchanges: Fix typo (syserror() -> syserr())

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-12  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-genchanges.pl: Fix typo (syserror() -> syserr()).
+
+2007-12-12  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Use || to fallback to
 	a default value instead of using a temporary variable and checking if
 	it's not defined.
