updated Japanese program translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * French (Frédéric Bothamy)
   * Swedish (Peter Karlsson)
   * German (Helge Kreutzmann)
+  * Japanese (Kenshi Muto). Closes: #455841
 
  -- Frank Lichtenheld <djpig@debian.org>  Wed, 05 Dec 2007 15:05:56 +0100
 
