Complete German scripts translation for dpkg-genchanges.pl, dpkg-gencontrol.pl, and dpkg-shlibdeps.pl and work on others

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-17  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 253t0f227u.
+
 2007-12-10  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* de.po: Updated to 221t0f259u.
